--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="source/koala.jpeg">
+    <link rel="icon" href="source/otter.jpeg">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,11 +17,13 @@
     <section>
         <article>
             <h2>Tentang Saya</h2>
-            <p>Hi! Apa kabar? Saya Yurin Nymphaea, seorang pelajar yang suka sekali dengan koding. Bahasa pemrograman yang sering saya gundakan ketika ngoding adalah JavaScript, C#, Java, Dart, dan Kotlin. Saya adalah seorang yang memenangkan LKS (Lomba Kompetensi Siswa) bidang IT Software Kabupaten Sragen tahun 2023.</p>
+            <p>Hi! Saya Yurin Nymphaea, seorang pelajar berumur 17 tahun yang berrsekolah di SMK Negeri 2 Sragen. Di sekolah tersebut saya mengambil prodi Teknik Komputer dan Jaringan (K13). Saya adalah seorang anak muda yang memiliki hobi ngoding, membaca, menyani, dan bermain game. Saya memiliki minat yang kuat di bidang pemrograman.</p>
+            <h2>Mengapa Suka Pemrograman?</h2>
+            <p>Pertama saya mengenal koding adalah ketika saya bermain Discord di tahun 2020, dimana saat itu masih dalam suasana pandemi COVID-19. Bahasa pemrograman yang sering saya gundakan ketika ngoding adalah JavaScript, C#, Java, Dart, dan Kotlin. Saya adalah seorang yang menang dalam ajang perlombaan LKS (Lomba Kompetensi Siswa) bidang IT Software Kabupaten Sragen tahun 2023. Saya sendiri cukup antusias dalam ajang perlombaan tersebut.</p>
         </article>
     </section>
     <footer>
-        <p>&copy; Yurin Nymphaea. Versi 28 Oktober</p>
+        <p>&copy; Yurin Nymphaea. Versi 28 Oktober 2023</p>
     </footer>
 </body>
 </html>
