--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans&family=Sometype+Mono&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Yurin Website</title>
 </head>
 <body>
@@ -16,14 +17,32 @@
     </header>
     <section>
         <article>
-            <h2>Tentang Saya</h2>
-            <p>Hi! Saya Yurin Nymphaea, seorang pelajar berumur 17 tahun yang berrsekolah di SMK Negeri 2 Sragen. Di sekolah tersebut saya mengambil prodi Teknik Komputer dan Jaringan (K13). Saya adalah seorang anak muda yang memiliki hobi ngoding, membaca, menyani, dan bermain game. Saya memiliki minat yang kuat di bidang pemrograman.</p>
-            <h2>Mengapa Suka Pemrograman?</h2>
-            <p>Pertama saya mengenal koding adalah ketika saya bermain Discord di tahun 2020, dimana saat itu masih dalam suasana pandemi COVID-19. Bahasa pemrograman yang sering saya gundakan ketika ngoding adalah JavaScript, C#, Java, Dart, dan Kotlin. Saya adalah seorang yang menang dalam ajang perlombaan LKS (Lomba Kompetensi Siswa) bidang IT Software Kabupaten Sragen tahun 2023. Saya sendiri cukup antusias dalam ajang perlombaan tersebut.</p>
+            <!-- Tentang Saya -->
+            <h2><span class="material-symbols-outlined">circles</span> Tentang Saya</h2>
+            <p>Hi! <span class="material-symbols-outlined">waving_hand</span> Perkenalkan namaku Yurin Nymphaea (nama panggung), saat ini aku adalah seorang pelajar berumur 17 tahun yang bersekolah di SMK Negeri 2 Sragen. Di sekolah tersebut aku mengambil prodi Teknik Komputer dan Jaringan (K13). Aku adalah seorang anak muda yang memiliki hobi ngoding, traveling, membaca, menyanyi, dan bermain game. Aku tinggal di salah satu kecamatan yang ada di Kabupaten Sragen. Aku memiliki minat yang kuat di bidang pemrograman.</p> <br>
+
+            <!-- Mengapa Suka Pemrograman? -->
+            <h2><span class="material-symbols-outlined">circles</span> Mengapa Suka Pemrograman?</h2>
+            <p>Pertama aku mengenal pemrograman adalah ketika aku menggunakan aplikasi Discord di tahun 2020, dimana saat itu dunia masih dalam suasana pandemi COVID-19. Discord memiliki fitur BOT yang multifungsi yang bisa digunakan apapun termasuk bermain game dan memanage server Discord, BOT Discord sendiri bisa dikembangkan oleh programmer di seluruh dunia, nah dari sinilah aku mulai suka dengan pemrograman dan berkeinginan untuk mempelajari lebih dalam tentang pemrograman. Saat ini bahasa pemrograman yang sering aku gunakan ketika ngoding adalah <strong>JavaScript, C#, Java, Dart, dan Kotlin</strong>. Aku juga pernah menang dalam ajang perlombaan LKS (Lomba Kompetensi Siswa) bidang IT Software Kabupaten Sragen tahun 2023. Aku sendiri cukup antusias dalam ajang perlombaan tersebut.</p> <br>
+
+            <!-- Rencana Kedepan? -->
+            <h2><span class="material-symbols-outlined">query_stats</span> Rencana Kedepan?</h2>
+            <p>Rencanaku selanjutnya adalah membuat program sederhana yang berguna untuk masyarakat Indonesia dan mengembangkan berbagai program tersebut supaya lebih baik lagi. <strong>"Belajar Belajar Belajar Giat"</strong> adalah motto hidupku saat ini.</p> <br>
+
+            <!-- Bagaimana Cara Menghubungi Anda? -->
+            <h2><span class="material-symbols-outlined">contacts_product</span> Bagaimana Cara Menghubungi Anda?</h2>
+            <p>Hubungi aku melalui Instagram <a href="https://instagram.com/aboutyurin">@aboutyurin</a></p> <br>
+
+            <!-- Bagaimana Cara Melihat Versi Website? -->
+            <h2><span class="material-symbols-outlined">grass</span> Bagaimana Cara Lihat Versi Website?</h2>
+            <p>Anda bisa melihat catatan versi website ini <a href="version.html">disini!</a></p>
         </article>
     </section>
     <footer>
-        <p>&copy; Yurin Nymphaea. Versi 28 Oktober 2023</p>
+        <p>
+            &copy; Yurin Nymphaea <br>
+            Versi 30 Oktober 2023
+        </p>
     </footer>
 </body>
 </html>
