--- a/version.html
+++ b/version.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="source/otter.jpeg">
+    <link rel="icon" href="ImageAsset/cat.jpg">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,19 +17,23 @@
     </header>
     <section>
         <article>
+            <!-- Update Log 3 -->
+            <h2>3 November 2023</h2>
+            <p><strong>* Perubahan Antarmuka Pengguna *</strong><br>Menambahkan dan mengedit beberapa kalimat serta mengganti icon.</p>
+
             <!-- Update Log 2 -->
             <h2>30 Oktober 2023</h2>
-            <p>Menambah icon, mengubah font yang tadinya <strong>Playpen Sans</strong> menjadi <strong>Sometype Mono</strong> (Sumber Google Fonts), dan juga menambahkan halaman website bagian versi untuk mengetahui perubahan website kepada para pengunjung website dan beberapa perubahan kecil lainnya.</p> <br>
+            <p><strong>* Perubahan Antarmuka Pengguna *</strong><br>Menambah icon, mengubah font yang tadinya <strong>Playpen Sans</strong> menjadi <strong>Sometype Mono</strong> (Sumber Google Fonts), dan juga menambahkan halaman website bagian versi untuk mengetahui perubahan website kepada para pengunjung website dan beberapa perubahan kecil lainnya.</p> <br>
 
             <!-- Update Log 1 -->
             <h2>28 Oktober 2023</h2>
-            <p>Membuat landasan website menggunakan hosting Github Pages!</p>
+            <p><strong>* Peluncuran Awal *</strong><br>Membuat landasan website menggunakan hosting Github Pages!</p>
         </article>
     </section>
     <footer>
         <p>
             &copy; Yurin Nymphaea <br>
-            Versi 30 Oktober 2023
+            Versi 3 November 2023
         </p>
     </footer>
 </body>
