--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="ImageAsset/cat.jpg">
+    <link rel="icon" href="ImageAsset/ct.png">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans&family=Sometype+Mono&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Julee&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Yurin Website</title>
 </head>
@@ -19,15 +19,11 @@
         <article>
             <!-- Tentang Saya -->
             <h2><span class="material-symbols-outlined">circles</span> Tentang Saya</h2>
-            <p>Halo! <span class="material-symbols-outlined">waving_hand</span> Perkenalkan namaku Yurin Nymphaea, saat ini aku adalah seorang pelajar berumur 17 tahun yang bersekolah di SMK Negeri 2 Sragen jurusan Teknik Komputer dan Jaringan (K13). Aku adalah seorang anak muda yang memiliki minat yang kuat di pecinta alam dan pemrograman, semua rasa penasaranku dan kegabutanku akanku ekspresikan pada kedua bidang tersebut.</p> <br>
+            <p>Hello, World! And Hello, Unhappy! <span class="material-symbols-outlined">waving_hand</span> Perkenalkan namaku Yurin Pupee, saat ini aku adalah seorang pelajar berumur 18 tahun. Aku seorang mahasiswa prodi Sistem Informasi di Universitas Terbuka. Aku adalah seorang anak muda yang memiliki minat yang kuat di bidang pecinta alam dan pemrograman, semua rasa penasaranku dan kegabutanku akan aku ekspresikan pada kedua bidang tersebut.</p> <br>
 
-            <!-- Pecinta Alam -->
-            <h2><span class="material-symbols-outlined">circles</span> Pecinta Alam</h2>
-            <p>Pecinta Alam adalah seseorang yang mencintai alam. Tetapi, arti dari pecinta alam bukan hanya itu saja, melainkan seseorang yang memahami dan mencintai alam dengan sepenuh hati, dan menyadari bahwa dirinya adalah makhluk yang diciptakan oleh Tuhan Yang Maha Esa dari alam dan kembali ke alam itu sendiri. Semua orang wajib untuk menjadi seorang pecinta alam, karena kita hidup sendiri di alam semesta ini, dan jika bukan kita yang menjaga alam ini lantas siapa lagi? Aku menjadi seorang pecinta alam sebab hal tersebut.</p> <br>
-
-            <!-- Pemrograman -->
-            <h2><span class="material-symbols-outlined">circles</span> Pemrograman</h2>
-            <p>Pemrograman adalah cara kita membuat dan menyelesaikan masalah di komputer, tetapi penyelesaian masalah juga bisa diterapkan di kehidupan nyata. Pertama aku mengenal pemrograman adalah ketika aku menggunakan aplikasi Discord di tahun 2020, dimana saat itu dunia masih dalam suasana pandemi COVID-19. Discord memiliki fitur BOT multifungsi yang bisa digunakan apapun termasuk bermain game dan memanage server Discord, BOT Discord sendiri bisa dikembangkan oleh programmer di seluruh dunia, nah dari sinilah aku mulai suka dengan pemrograman dan berkeinginan untuk mempelajari lebih dalam tentang pemrograman. Saat ini bahasa pemrograman yang sering aku gunakan ketika ngoding adalah <strong>JavaScript, C#, Java, Dart, dan Kotlin</strong>. Aku juga pernah menang dalam ajang perlombaan LKS (Lomba Kompetensi Siswa) bidang IT Software Kabupaten Sragen tahun 2023. Aku sendiri cukup antusias dalam ajang perlombaan tersebut.</p> <br>
+            <!-- Proyek -->
+            <h2><span class="material-symbols-outlined">dataset</span> Proyek</h2>
+            <p><i>Saat ini hanya <a href="https://aboutyurin.github.io/BusStationRandomPicker/">Bus Station Random Picker</a>...</i></p> <br>
 
             <!-- Rencana Kedepan? -->
             <h2><span class="material-symbols-outlined">query_stats</span> Rencana Kedepan?</h2>
@@ -35,11 +31,11 @@
 
             <!-- Motto -->
             <h2><span class="material-symbols-outlined">follow_the_signs</span> Motto</h2>
-            <p>Belajar giat, pantang menyerah, dan semangat hidup!</p> <br>
+            <p>Belajar giat, pantang menyerah, dan semangat hidup!<br> JAYA JAYA JAYA!</p> <br>
 
             <!-- Bagaimana Cara Menghubungi Anda? -->
             <h2><span class="material-symbols-outlined">contacts_product</span> Bagaimana Cara Menghubungi Anda?</h2>
-            <p>Hubungi aku melalui Instagram <a href="https://instagram.com/aboutyurin">@aboutyurin</a><br>Atau juga melalui server <a href="https://discord.gg/y442U9asD8">Discord!</a></p> <br>
+            <p>Hubungi aku melalui Instagram <a href="https://instagram.com/aboutyurin">@aboutyurin</a><br>Atau juga melalui server <a href="https://discord.gg/EWhdPFXwPh">Discord!</a></p> <br>
 
             <!-- Bagaimana Cara Melihat Versi Website? -->
             <h2><span class="material-symbols-outlined">grass</span> Bagaimana Cara Lihat Versi Website?</h2>
@@ -48,8 +44,8 @@
     </section>
     <footer>
         <p>
-            &copy; 2023 Yurin Nymphaea <br>
-            Versi 3 November 2023
+            &copy; 2024 Yurin Pupee <br>
+            Versi 11 September 2024
         </p>
     </footer>
 </body>
