--- a/version.html
+++ b/version.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="ImageAsset/cat.jpg">
+    <link rel="icon" href="ImageAsset/ct.png">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans&family=Sometype+Mono&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Julee&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Yurin Website Version</title>
 </head>
@@ -17,6 +17,11 @@
     </header>
     <section>
         <article>
+            <!-- Update Log 4 -->
+            <h2>11 September 2024</h2>
+            <p><strong>* Perubahan Antarmuka Pengguna *</strong><br>Menghapus dan mengedit beberapa kalimat serta mengganti icon. Mengubah font yang tadinya <strong>Sometype Mono</strong> menjadi <strong>Julee</strong> (Sumber Google Fonts).</p>
+            <p><strong>* Backend *</strong><br>Mengubah link pada hyperlink Discord, </p>
+
             <!-- Update Log 3 -->
             <h2>3 November 2023</h2>
             <p><strong>* Perubahan Antarmuka Pengguna *</strong><br>Menambahkan dan mengedit beberapa kalimat serta mengganti icon.</p>
@@ -32,8 +37,8 @@
     </section>
     <footer>
         <p>
-            &copy; Yurin Nymphaea <br>
-            Versi 3 November 2023
+            &copy; 2024 Yurin Pupee <br>
+            Versi 11 September 2024
         </p>
     </footer>
 </body>
